fix: 불필요한 예외 던지기 제거, 불변 리스트 반환하던 것을 가변 리스트 반환으로 변경